--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
+.custom-cursor{
+  cursor: url('/images/carousel-cursor.png'), auto;
+  background-color: pink;
+}
+
+
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
